--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
@@ -127,9 +127,9 @@
             {{ worker.mainJob?.other ? worker.mainJob.other : worker.mainJob.title }} job role yet.
           </p>
         </div>
-        <div class="govuk-grid-column-one-third">
+        <div class="govuk-grid-column-one-third govuk-!-padding-right-0">
           <a
-            class="govuk-list"
+            class="govuk-list govuk-util__float-right"
             *ngIf="canEditWorker"
             draggable="false"
             role="button"
@@ -150,9 +150,9 @@
             </ng-container>
           </p>
         </div>
-        <div class="govuk-grid-column-one-third">
+        <div class="govuk-grid-column-one-third govuk-!-padding-right-0">
           <a
-            class="govuk-list"
+            class="govuk-list govuk-util__float-right"
             *ngIf="canEditWorker"
             draggable="false"
             role="button"
