create spec file for data sharing component
Co-authored-by: duncanc19 <duncanc19@users.noreply.github.com>

--- a/src/app/features/workplace/data-sharing/data-sharing.component.html
+++ b/src/app/features/workplace/data-sharing/data-sharing.component.html
@@ -62,7 +62,7 @@
             <h2 class="govuk-fieldset__heading">Do you agree to us sharing your data with the CQC?</h2>
           </legend>
           <div class="govuk-radios govuk-radios--conditional">
-            <div class="govuk-radios__item">
+            <div class="govuk-radios__item govuk-!-margin-top-3">
               <input
                 aria-controls="regulatedByCQC-conditional-1"
                 class="govuk-radios__input"
@@ -86,17 +86,16 @@
                 value="no"
                 [formControlName]="'regulatedByCQC'"
               />
-              <label class="govuk-label govuk-radios__label" for="regulatedByCQC-2">
+              <label class="govuk-label govuk-radios__label govuk-!-margin-bottom-8" for="regulatedByCQC-2">
                 No, I do not agree to you sharing our data with the CQC
               </label>
             </div>
           </div>
-
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
             <h2 class="govuk-fieldset__heading">Do you agree to us sharing your data with local authorities?</h2>
           </legend>
           <div class="govuk-radios govuk-radios--conditional">
-            <div class="govuk-radios__item">
+            <div class="govuk-radios__item govuk-!-margin-top-3">
               <input
                 aria-controls="regulatedByCQC-conditional-1"
                 class="govuk-radios__input"
