Add canEditWorker to new-training component

--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
@@ -167,10 +167,10 @@
 
       <div *ngIf="mandatoryTrainingCount > 0">
         <app-new-training
-          [workplace]="workplace"
           [trainingRecords]="mandatoryTraining"
           [trainingType]="'mandatory'"
           [setReturnRoute]="setReturnRoute"
+          [canEditWorker]="canEditWorker"
           data-testid="mandatory-training"
         ></app-new-training>
       </div>
