--- a/src/app/features/workers/add-edit-qualification/add-edit-qualification.component.html
+++ b/src/app/features/workers/add-edit-qualification/add-edit-qualification.component.html
@@ -1,4 +1,13 @@
 <app-error-summary *ngIf="submitted && form.invalid" [formErrorsMap]="formErrorsMap" [form]="form"></app-error-summary>
+<ng-container *ngIf="worker">
+  <div class="govuk-grid-row govuk-!-margin-bottom-0">
+    <div class="govuk-grid-column-full">
+      <span class="govuk-caption-xl govuk-!-margin-right-3" data-testid="workerNameAndRole">
+        {{ worker.nameOrId }}: {{ worker.mainJob?.other ? worker.mainJob.other : worker.mainJob.title }}
+      </span>
+    </div>
+  </div>
+</ng-container>
 
 <form *ngIf="!qualificationId || (qualificationId && record)" (ngSubmit)="onSubmit()" [formGroup]="form">
   <div class="govuk-grid-row">
@@ -7,7 +16,7 @@
         <fieldset class="govuk-fieldset" aria-describedby="qualification-conditional-hint" role="group">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
             <h1 class="govuk-fieldset__heading">
-              {{ qualificationId ? 'Edit qualification details' : 'Add qualification details' }}
+              {{ qualificationId ? 'Qualification details' : 'Add qualification details' }}
             </h1>
           </legend>
 
@@ -54,8 +63,9 @@
   </div>
 
   <div class="govuk-button-group">
-    <button type="submit" class="govuk-button">
-      {{ qualificationId ? 'Update qualification' : 'Add qualification' }}
+    <button type="submit" class="govuk-button govuk-!-margin-right-5">
+      {{ qualificationId ? 'Save and return' : 'Add qualification' }}
+    </button>
     </button>
     <a
       class="govuk-button govuk-button--link govuk-util__float-right"
