--- a/src/app/features/workers/new-training-qualifications-record/delete-record/delete-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/delete-record/delete-record.component.html
@@ -15,12 +15,12 @@
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">Training category</dt>
         <dd class="govuk-summary-list__value" data-testid="trainingCategory">
-          {{ trainingRecord.trainingCategory.category }}
+          {{ record.trainingCategory.category }}
         </dd>
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">Training name</dt>
-        <dd class="govuk-summary-list__value" data-testid="trainingName">{{ trainingRecord.title }}</dd>
+        <dd class="govuk-summary-list__value" data-testid="trainingName">{{ record.title }}</dd>
       </div>
     </dl>
 
