--- a/src/app/features/workers/new-training-qualifications-record/delete-record/delete-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/delete-record/delete-record.component.html
@@ -3,7 +3,7 @@
     <span class="govuk-caption-xl govuk-!-margin-right-3" data-testid="workerNameAndRole">
       {{ worker.nameOrId }}: {{ worker.mainJob?.other ? worker.mainJob.other : worker.mainJob.title }}
     </span>
-    <h1 class="govuk-heading-l govuk-!-margin-bottom-9">You're about to delete this training record</h1>
+    <h1 class="govuk-heading-l govuk-!-margin-bottom-9">You're about to delete this training trainingRecord</h1>
 
     <dl class="govuk-summary-list govuk-summary-list--no-border govuk-summary-list--wide-key">
       <div class="govuk-summary-list__row">
@@ -15,12 +15,12 @@
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">Training category</dt>
         <dd class="govuk-summary-list__value" data-testid="trainingCategory">
-          {{ record.trainingCategory.category }}
+          {{ trainingRecord.trainingCategory.category }}
         </dd>
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">Training name</dt>
-        <dd class="govuk-summary-list__value" data-testid="trainingName">{{ record.title }}</dd>
+        <dd class="govuk-summary-list__value" data-testid="trainingName">{{ trainingRecord.title }}</dd>
       </div>
     </dl>
 
