--- a/src/app/features/workplace/data-sharing/data-sharing.component.html
+++ b/src/app/features/workplace/data-sharing/data-sharing.component.html
@@ -93,37 +93,40 @@
               </div>
             </div>
           </div>
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-            <h2 class="govuk-fieldset__heading">Do you agree to us sharing your data with local authorities?</h2>
-          </legend>
-          <div class="govuk-radios govuk-radios--conditional">
-            <div class="govuk-radios__item govuk-!-margin-top-3">
-              <input
-                aria-controls="localAuthorities-conditional-1"
-                class="govuk-radios__input"
-                id="localAuthorities-yes"
-                data-testid="localAuthorities-yes"
-                type="radio"
-                [value]="true"
-                [formControlName]="'localAuthorities'"
-              />
-              <label class="govuk-label govuk-radios__label" for="localAuthorities-1">
-                Yes, I agree to you sharing our data with local authorities
-              </label>
-            </div>
-            <div class="govuk-radios__item">
-              <input
-                aria-controls="localAuthorities-conditional-2"
-                class="govuk-radios__input"
-                id="localAuthorities-no"
-                data-testid="localAuthorities-no"
-                type="radio"
-                [value]="false"
-                [formControlName]="'localAuthorities'"
-              />
-              <label class="govuk-label govuk-radios__label" for="localAuthorities-2">
-                No, I do not agree to you sharing our data with local authorities</label
-              >
+
+          <div>
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+              <h2 class="govuk-fieldset__heading">Do you agree to us sharing your data with local authorities?</h2>
+            </legend>
+            <div class="govuk-radios govuk-radios--conditional">
+              <div class="govuk-radios__item govuk-!-margin-top-3">
+                <input
+                  aria-controls="localAuthorities-conditional-1"
+                  class="govuk-radios__input"
+                  id="localAuthorities-yes"
+                  data-testid="localAuthorities-yes"
+                  type="radio"
+                  [value]="true"
+                  [formControlName]="'localAuthorities'"
+                />
+                <label class="govuk-label govuk-radios__label" for="localAuthorities-1">
+                  Yes, I agree to you sharing our data with local authorities
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input
+                  aria-controls="localAuthorities-conditional-2"
+                  class="govuk-radios__input"
+                  id="localAuthorities-no"
+                  data-testid="localAuthorities-no"
+                  type="radio"
+                  [value]="false"
+                  [formControlName]="'localAuthorities'"
+                />
+                <label class="govuk-label govuk-radios__label" for="localAuthorities-2">
+                  No, I do not agree to you sharing our data with local authorities</label
+                >
+              </div>
             </div>
           </div>
         </fieldset>
