--- a/src/app/shared/components/workplace-summary/workplace-summary.component.html
+++ b/src/app/shared/components/workplace-summary/workplace-summary.component.html
@@ -268,7 +268,7 @@
       <app-summary-record-change
         [explanationText]="' data sharing'"
         [link]="['/workplace', workplace.uid, 'sharing-data']"
-        [hasData]="!workplace.shareWith?.cqc && !workplace.shareWith?.localAuthorities"
+        [hasData]="workplace.shareWith?.cqc || workplace.shareWith?.localAuthorities"
         (setReturnClicked)="this.setReturn()"
       ></app-summary-record-change>
     </dd>
