--- a/src/app/features/workers/new-training-qualifications-record/delete-record/delete-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/delete-record/delete-record.component.html
@@ -53,7 +53,7 @@
 
     <div class="govuk-button-group govuk-!-margin-top-7">
       <button type="button" class="govuk-button govuk-button--warning govuk-!-margin-right-2" (click)="deleteRecord()">
-        Delete this training record
+        Delete this {{ trainingOrQualification }} record
       </button>
       <a
         class="govuk-button govuk-button--link govuk-!-margin-left-9"
