feat(sharingPermissionsQuestions): Update labels for radio buttons to match ids

--- a/src/app/features/workplace/data-sharing/data-sharing.component.html
+++ b/src/app/features/workplace/data-sharing/data-sharing.component.html
@@ -73,7 +73,7 @@
                   [value]="true"
                   [formControlName]="'cqc'"
                 />
-                <label class="govuk-label govuk-radios__label" for="cqc-1">
+                <label class="govuk-label govuk-radios__label" for="cqc-yes">
                   Yes, I agree to you sharing our data with the CQC
                 </label>
               </div>
@@ -87,7 +87,7 @@
                   [value]="false"
                   [formControlName]="'cqc'"
                 />
-                <label class="govuk-label govuk-radios__label govuk-!-margin-bottom-8" for="cqc-2">
+                <label class="govuk-label govuk-radios__label govuk-!-margin-bottom-8" for="cqc-no">
                   No, I do not agree to you sharing our data with the CQC
                 </label>
               </div>
@@ -109,7 +109,7 @@
                   [value]="true"
                   [formControlName]="'localAuthorities'"
                 />
-                <label class="govuk-label govuk-radios__label" for="localAuthorities-1">
+                <label class="govuk-label govuk-radios__label" for="localAuthorities-yes">
                   Yes, I agree to you sharing our data with local authorities
                 </label>
               </div>
@@ -123,7 +123,7 @@
                   [value]="false"
                   [formControlName]="'localAuthorities'"
                 />
-                <label class="govuk-label govuk-radios__label" for="localAuthorities-2">
+                <label class="govuk-label govuk-radios__label" for="localAuthorities-no">
                   No, I do not agree to you sharing our data with local authorities</label
                 >
               </div>
