--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -68,7 +68,7 @@
       <app-tab
         *ngIf="workplace && canViewEstablishment"
         [title]="'Workplace'"
-        [alert]="workplace?.employerType && showCQCDetailsBanner"
+        [redAlert]="workplace?.employerType && (showCQCDetailsBanner || showSharingPermissionsBanner)"
       >
         <app-workplace-tab [workplace]="workplace" [workerCount]="workerCount"></app-workplace-tab>
       </app-tab>
