--- a/src/app/shared/directives/add-edit-training/add-edit-training.component.html
+++ b/src/app/shared/directives/add-edit-training/add-edit-training.component.html
@@ -148,15 +148,7 @@
       *ngIf="trainingRecordId && newTrainingAndQualificationsRecordsFlag"
       type="button"
       class="govuk-button govuk-button--warning govuk-!-margin-right-8"
-      [routerLink]="[
-        '/workplace',
-        workplace.uid,
-        'training-and-qualifications-record',
-        worker.uid,
-        'training',
-        trainingRecordId,
-        'delete'
-      ]"
+      [routerLink]="['../delete']"
     >
       Delete
     </button>
