--- a/src/app/features/workplace/data-sharing/data-sharing.component.html
+++ b/src/app/features/workplace/data-sharing/data-sharing.component.html
@@ -7,11 +7,16 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <h1 class="govuk-heading-xl">Sharing your data</h1>
-    <p>We would like to share your data with other organisations.</p>
+    <h1 class="govuk-heading-xl">Share your data</h1>
+    <div *ngIf="establishment.isRegulated">
+      <p>We'd like to share your data with the Care Quality Commission (CQC) and local authorities.</p>
+    </div>
+    <div *ngIf="!establishment.isRegulated">
+      <p>We'd like to share your data with local authorities.</p>
+    </div>
     <p>
-      Before we can do that, in order to comply with the Data Protection Act and The General Data Protection Regulations
-      (GDPR) we need your consent.
+      Before we can do that, and in order to comply with the Data Protection Act and the General Data Protection
+      Regulations (GDPR), we'll need your permission.
     </p>
     <app-details [title]="'Why do we share your data?'">
       <p>
