Add comma and the for the CQC reveal

--- a/src/app/features/workplace/data-sharing/data-sharing.component.html
+++ b/src/app/features/workplace/data-sharing/data-sharing.component.html
@@ -39,13 +39,13 @@
       <ul class="govuk-list govuk-list--bullet">
         <li>record ID</li>
         <li>pay</li>
-        <li>sickness absence</li>
+        <li>sickness, absence</li>
         <li>date of birth</li>
         <li>National Insurance number</li>
         <li>ethnicity</li>
         <li>nationality</li>
         <li>country of birth</li>
-        <li>year of arrival in UK</li>
+        <li>year of arrival in the UK</li>
         <li>hours worked in the last 7 days</li>
       </ul>
       <p>The CQC cannot identify workers from the data that is shared with them.</p>
