--- a/src/app/shared/components/workplace-tab/workplace-tab.component.html
+++ b/src/app/shared/components/workplace-tab/workplace-tab.component.html
@@ -18,12 +18,12 @@
       </app-inset-text>
     </div>
     <div class="govuk-grid-column-two-thirds-from-desktop" *ngIf="showSharingPermissionsBanner">
-      <app-inset-text [color]="'todo'" data-testid="check-cqc-details">
+      <app-inset-text [color]="'todo'" data-testid="check-sharing-permissions">
         <h3 class="govuk-heading-s">You need to review your data sharing permissions</h3>
         <p>Skills for Care have updated the list of data that wil be shred with local authorities.</p>
         <p>You need to let us know that you're happy for us to share your data.</p>
         <p>
-          <a href="" target="_blank">Please review your data sharing permissions</a>
+          <a [routerLink]="['/']">Please review your data sharing permissions</a>
         </p>
       </app-inset-text>
     </div>
