--- a/src/app/shared/components/workplace-tab/workplace-tab.component.html
+++ b/src/app/shared/components/workplace-tab/workplace-tab.component.html
@@ -20,7 +20,7 @@
     <div class="govuk-grid-column-two-thirds-from-desktop" *ngIf="showSharingPermissionsBanner">
       <app-inset-text [color]="'todo'" data-testid="check-sharing-permissions">
         <h3 class="govuk-heading-s">You need to review your data sharing permissions</h3>
-        <p>Skills for Care have updated the list of data that wil be shred with local authorities.</p>
+        <p>Skills for Care have updated the list of data that will be shred with local authorities.</p>
         <p>You need to let us know that you're happy for us to share your data.</p>
         <p>
           <a [routerLink]="['/']">Please review your data sharing permissions</a>
