--- a/src/app/features/workers/worker-save-success/worker-save-success.component.html
+++ b/src/app/features/workers/worker-save-success/worker-save-success.component.html
@@ -15,7 +15,7 @@
         role="button"
         draggable="false"
         [routerLink]="return.url"
-        [fragment]="'home'"
+        [fragment]="return.fragment"
       >
         Go to {{ return.label }}
       </a>
