--- a/src/app/features/admin/search/search-for-user/search-for-user.component.html
+++ b/src/app/features/admin/search/search-for-user/search-for-user.component.html
@@ -1,5 +1,37 @@
 <div class="govuk-grid-column-full">
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">Search for a user</div>
+    <div class="govuk-grid-column-two-thirds">Search by name, username or email address.</div>
+    <div class="govuk-grid-column-one-third govuk-!-padding-right-3">
+      <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form" id="server-error">
+        <fieldset class="govuk-fieldset">
+          <div class="govuk-form-group">
+            <label class="govuk-label" for="name"> Name </label>
+            <input class="govuk-input" id="name" name="name" type="text" [formControlName]="'name'" />
+          </div>
+          <div class="govuk-form-group">
+            <label class="govuk-label" for="username"> Username </label>
+            <input
+              class="govuk-input govuk-input--width-20"
+              id="username"
+              name="username"
+              type="text"
+              [formControlName]="'username'"
+            />
+          </div>
+          <div class="govuk-form-group">
+            <label class="govuk-label" for="emailAddress"> Email address </label>
+            <input
+              class="govuk-input govuk-input--width-20"
+              id="emailAddress"
+              name="emailAddress"
+              type="text"
+              [formControlName]="'emailAddress'"
+            />
+          </div>
+        </fieldset>
+
+        <button type="submit" class="govuk-button" data-testid="searchButton">Search</button>
+      </form>
+    </div>
   </div>
 </div>
