--- a/src/app/features/first-login-wizard/first-login-wizard.component.html
+++ b/src/app/features/first-login-wizard/first-login-wizard.component.html
@@ -7,13 +7,33 @@
     </div>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-one-half">
-        <h1 class="govuk-!-font-weight-regular">Help to get you started</h1>
+        <h1 class="govuk-!-font-weight-regular govuk-!-margin-top-0">Help to get you started</h1>
         <h2 class="govuk-heading-m govuk-!-margin-bottom-2">
-          {{ wizard[0].title }}
+          {{ wizards[currentIndex].title }}
         </h2>
-        <div class="asc-cms-content" [innerHTML]="wizard[0].content"></div>
+        <div class="asc-cms-content" [innerHTML]="wizards[currentIndex].content"></div>
       </div>
       <div class="govuk-grid-column-one-half"></div>
+    </div>
+    <div class="govuk-grid-row">
+      <div class="govuk-util__inline-block govuk-grid-column-one-half govuk-util__align-right">
+        <a
+          *ngIf="!isFirst"
+          class="asc-chevron-before govuk-button--link govuk-!-margin-top-3"
+          href="#"
+          (click)="previousWizard($event)"
+          >Previous</a
+        >
+      </div>
+      <div class="govuk-util__inline-block govuk-grid-column-one-half govuk-util__float-right govuk-util__align-right">
+        <a
+          *ngIf="!isLast"
+          class="asc-chevron-after govuk-button--link govuk-!-margin-top-3 margin-left-6"
+          href="#"
+          (click)="nextWizard($event)"
+          >Next</a
+        >
+      </div>
     </div>
   </div>
 </div>
