--- a/src/app/features/workplace/view-workplace/view-workplace.component.html
+++ b/src/app/features/workplace/view-workplace/view-workplace.component.html
@@ -26,7 +26,10 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
     <app-tabs>
-      <app-tab [title]="'Workplace'" [alert]="workplace?.employerType && showCQCDetailsBanner">
+      <app-tab
+        [title]="'Workplace'"
+        [redAlert]="workplace?.employerType && (showCQCDetailsBanner || showSharingPermissionsBanner)"
+      >
         <app-workplace-tab
           [workplace]="workplace"
           [summaryReturnUrl]="summaryReturnUrl"
