--- a/src/app/shared/components/workplace-tab/workplace-tab.component.html
+++ b/src/app/shared/components/workplace-tab/workplace-tab.component.html
@@ -23,9 +23,7 @@
         <p>Skills for Care have updated the list of data that will be shared with local authorities.</p>
         <p>You need to let us know that you're happy for us to share your data.</p>
         <p>
-          <a [routerLink]="['/workplace', workplace?.uid, 'sharing-data']"
-            >Please review your data sharing permissions</a
-          >
+          <a (click)="navigateToShareDataPage($event)" href="#">Please review your data sharing permissions</a>
         </p>
       </app-inset-text>
     </div>
