--- a/src/app/features/first-login-wizard/first-login-wizard.component.html
+++ b/src/app/features/first-login-wizard/first-login-wizard.component.html
@@ -14,7 +14,11 @@
         <div class="asc-cms-content" [innerHTML]="wizards[currentIndex].content"></div>
       </div>
       <div class="govuk-grid-column-one-half">
-        <img src="{{ imageUrl }}{{ wizards[currentIndex].image }}" alt="{{ wizards[currentIndex].title }}" />
+        <img
+          class="asc-shadow-box"
+          src="{{ imageUrl }}{{ wizards[currentIndex].image }}"
+          alt="{{ wizards[currentIndex].title }}"
+        />
       </div>
     </div>
     <div class="govuk-grid-row">
