--- a/src/app/features/admin/search/search-for-user/search-for-user.component.html
+++ b/src/app/features/admin/search/search-for-user/search-for-user.component.html
@@ -18,7 +18,7 @@
               <td class="govuk-table__cell">{{ item.name }}</td>
               <td class="govuk-table__cell">{{ item.username }}</td>
               <td class="govuk-table__cell">
-                <a (click)="setEstablishmentId(item.establishment.uid, item.username, null, $event)" href="#">{{
+                <a (click)="navigateToWorkplace(item.establishment.uid, item.username, null, $event)" href="#">{{
                   item.establishment.nmdsId
                 }}</a>
                 <img
