feat(adminSearchUsers): Add navigation to workplace when clicking workplace name in dropdown

--- a/src/app/features/admin/search/search-for-user/search-for-user.component.html
+++ b/src/app/features/admin/search/search-for-user/search-for-user.component.html
@@ -53,7 +53,7 @@
                         </td>
                         <td class="govuk-table__cell">
                           <a
-                            (click)="setEstablishmentId(item.establishment.uid, item.username, null, $event)"
+                            (click)="navigateToWorkplace(item.establishment.uid, item.username, null, $event)"
                             href="#"
                             >{{ item.establishment.name }}</a
                           >
