remove punctuation error in text

--- a/src/app/features/admin/search/search-for-workplace/search-for-workplace.component.html
+++ b/src/app/features/admin/search/search-for-workplace/search-for-workplace.component.html
@@ -1,7 +1,7 @@
 <div class="govuk-grid-column-full">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds" data-testid="initial-text">
-      Search by workplace name, postcode, workplace ID, location ID, or provider ID. <br />
+      Search by workplace name, postcode, workplace ID, location ID or provider ID. <br />
       You can also search with combinations, like workplace name and postcode.
     </div>
     <div class="govuk-grid-column-one-third govuk-!-padding-right-8">
