--- a/src/app/features/first-login-wizard/first-login-wizard.component.scss
+++ b/src/app/features/first-login-wizard/first-login-wizard.component.scss
@@ -19,3 +19,7 @@
 .asc-shadow-box {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
+
+.asc-no-underline {
+  text-decoration: none;
+}
